Prepare web release

--- a/www/Changelog
+++ b/www/Changelog
@@ -1,3 +1,8 @@
+Version 0.2.0	18 Jul 2010
+
+	* Add sprites support (thanks to wisk for the help)
+	* Small code cleanups
+
 Version 0.1.0	4 Jul 2010
 
 	* Initial release.
