--- a/www/Changelog
+++ b/www/Changelog
@@ -1,3 +1,11 @@
+Version 0.3.0	28 Aug 2010
+
+	* Add first Pokédex draft
+	* Add disassembler (allow you to decompile by double-clicking on
+	  address in game info tree)
+	* Some GUI improvements
+	* A few code cleanups
+
 Version 0.2.0	18 Jul 2010
 
 	* Add sprites support (thanks to wisk for the help)
