--- a/www/Changelog
+++ b/www/Changelog
@@ -1,3 +1,9 @@
+Version 0.5.0	22 Sep 2010
+
+	* Water wild Pokémon support
+	* Complete Pokédex (HM/TM, more stats, back sprite)
+	* A few bugs and regressions fixed
+
 Version 0.4.0	11 Sep 2010
 
 	* Much better performances at startup
