--- a/www/Changelog
+++ b/www/Changelog
@@ -1,3 +1,11 @@
+Version 0.7.0	6 Oct 2011
+
+	* Add trainers support
+	* Better sprites support
+	* Make build easy
+	* Fix various crashes
+	* Various code cleanups
+
 Version 0.6.0	31 Mar 2011
 
 	* API is much more pythonic
